force-app/main/default/objects/Contact/fields/DUMMY__c.field-meta.xml
<CustomField>
    <fullName>DUMMY__c</fullName>
    <label>DUMMY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>