force-app/main/default/objects/Contact/fields/eContacts__Created_By_eContacts__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Created_By_eContacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created By eContacts</label>
    <type>Checkbox</type>
</CustomField>