force-app/main/default/objects/Contact/fields/eContacts__Location_Text__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Location_Text__c</fullName>
    <label>Location Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>