force-app/main/default/objects/Contact/fields/eContacts__Signature_Image__c.field-meta.xml
<CustomField>
    <fullName>eContacts__Signature_Image__c</fullName>
    <label>Image Data3 Only</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>