force-app/main/default/objects/Contact/fields/My_Date__c.field-meta.xml
<CustomField>
    <fullName>My_Date__c</fullName>
    <label>My Date</label>
    <type>Date</type>
</CustomField>