force-app/main/default/objects/Contact/listViews/Org_Contact_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Contact_Hierarchy</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.ASSISTANT_NAME</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Contact_Hierarchy</label>
</ListView>